--- a/trunk/Info.plist
+++ b/trunk/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>PhotoDwarf</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>application_icon</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.fpkuehne.photoDwarf</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,7 +17,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0 Alpha 1</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
