--- a/trunk/Info.plist
+++ b/trunk/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>application_icon</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.fpkuehne.photoDwarf</string>
+	<string>org. photoapps.photoDwarf</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
