--- a/trunk/Info.plist
+++ b/trunk/Info.plist
@@ -6,8 +6,6 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>PhotoDwarf</string>
-	<key>CFBundleIconFile</key>
-	<string>application_icon</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.photoapps.photoDwarf</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,7 +15,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0 Alpha 2</string>
+	<string>1.0 Beta 1</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
